--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "debug": "node --inspect index.js",
     "dev": "nodemon index.js",
-    "test": "echo \\\"Error: no test specified\\\" && exit 1"
+    "test": "echo \\\"Error: no test specified\\\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "Ricardo Quintero",
   "license": "ISC",
@@ -15,9 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.4"
+    "mongoose": "^5.10.4",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
+    "eslint": "^7.9.0",
     "nodemon": "^2.0.4"
   }
 }
